
[TestPortalDashboardGen - 1]
{
 "aliases": [
  {
   "type": "azure-native:portal/v20190101preview:Dashboard"
  },
  {
   "type": "azure-native:portal/v20200901preview:Dashboard"
  },
  {
   "type": "azure-native:portal/v20221201preview:Dashboard"
  },
  {
   "type": "azure-native_portal_v20200901preview:portal:Dashboard"
  }
 ],
 "description": "The shared dashboard resource definition.\n\nUses Azure REST API version 2020-09-01-preview.",
 "inputProperties": {
  "dashboardName": {
   "description": "The name of the dashboard.",
   "type": "string",
   "willReplaceOnChanges": true
  },
  "location": {
   "description": "The geo-location where the resource lives",
   "type": "string",
   "willReplaceOnChanges": true
  },
  "properties": {
   "$ref": "#/types/azure-native:portal:DashboardPropertiesWithProvisioningState",
   "description": "The resource-specific properties for this resource.",
   "type": "object"
  },
  "resourceGroupName": {
   "description": "The name of the resource group. The name is case insensitive.",
   "type": "string",
   "willReplaceOnChanges": true
  },
  "tags": {
   "additionalProperties": {
    "type": "string"
   },
   "description": "Resource tags.",
   "type": "object"
  }
 },
 "properties": {
  "azureApiVersion": {
   "description": "The Azure API version of the resource.",
   "type": "string"
  },
  "location": {
   "description": "The geo-location where the resource lives",
   "type": "string"
  },
  "name": {
   "description": "The name of the resource",
   "type": "string"
  },
  "properties": {
   "$ref": "#/types/azure-native:portal:DashboardPropertiesWithProvisioningStateResponse",
   "description": "The resource-specific properties for this resource.",
   "type": "object"
  },
  "systemData": {
   "$ref": "#/types/azure-native:portal:SystemDataResponse",
   "description": "Azure Resource Manager metadata containing createdBy and modifiedBy information.",
   "type": "object"
  },
  "tags": {
   "additionalProperties": {
    "type": "string"
   },
   "description": "Resource tags.",
   "type": "object"
  },
  "type": {
   "description": "The type of the resource. E.g. \"Microsoft.Compute/virtualMachines\" or \"Microsoft.Storage/storageAccounts\"",
   "type": "string"
  }
 },
 "required": [
  "azureApiVersion",
  "location",
  "name",
  "properties",
  "systemData",
  "type"
 ],
 "requiredInputs": [
  "resourceGroupName"
 ],
 "type": "object"
}
---

[TestPortalDashboardGen - 2]
{
 "PUT": [
  {
   "location": "path",
   "name": "subscriptionId",
   "required": true,
   "value": {
    "type": "string"
   }
  },
  {
   "location": "path",
   "name": "resourceGroupName",
   "required": true,
   "value": {
    "maxLength": 90,
    "minLength": 1,
    "type": "string"
   }
  },
  {
   "location": "path",
   "name": "dashboardName",
   "required": true,
   "value": {
    "autoname": "random",
    "maxLength": 64,
    "minLength": 3,
    "pattern": "^[a-zA-Z0-9-]{3,64}$",
    "type": "string"
   }
  },
  {
   "body": {
    "properties": {
     "location": {
      "forceNew": true,
      "type": "string"
     },
     "properties": {
      "$ref": "#/types/azure-native:portal:DashboardPropertiesWithProvisioningState",
      "type": "object"
     },
     "tags": {
      "additionalProperties": {
       "type": "string"
      },
      "type": "object"
     }
    },
    "required": [
     "location"
    ]
   },
   "location": "body",
   "name": "dashboard",
   "required": true,
   "value": {}
  }
 ],
 "apiVersion": "2020-09-01-preview",
 "defaultBody": null,
 "path": "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Portal/dashboards/{dashboardName}",
 "response": {
  "id": {},
  "location": {},
  "name": {},
  "properties": {
   "$ref": "#/types/azure-native:portal:DashboardPropertiesWithProvisioningStateResponse"
  },
  "systemData": {
   "$ref": "#/types/azure-native:portal:SystemDataResponse"
  },
  "tags": {
   "additionalProperties": {
    "type": "string"
   }
  },
  "type": {}
 }
}
---

[TestPortalDashboardGen - 3]
{
 "azure-native:portal:DashboardLens": {
  "description": "A dashboard lens.",
  "properties": {
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard len's metadata."
   },
   "order": {
    "description": "The lens order.",
    "type": "integer"
   },
   "parts": {
    "description": "The dashboard parts.",
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardParts",
     "type": "object"
    },
    "type": "array"
   }
  },
  "required": [
   "order",
   "parts"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardLensResponse": {
  "description": "A dashboard lens.",
  "properties": {
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard len's metadata."
   },
   "order": {
    "description": "The lens order.",
    "type": "integer"
   },
   "parts": {
    "description": "The dashboard parts.",
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardPartsResponse",
     "type": "object"
    },
    "type": "array"
   }
  },
  "required": [
   "order",
   "parts"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartMetadata": {
  "description": "A dashboard part metadata.",
  "properties": {
   "inputs": {
    "description": "Inputs to dashboard part.",
    "items": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "array"
   },
   "settings": {
    "additionalProperties": {
     "$ref": "pulumi.json#/Any"
    },
    "description": "Settings of dashboard part.",
    "type": "object"
   },
   "type": {
    "description": "The type of dashboard part.",
    "type": "string"
   }
  },
  "required": [
   "type"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartMetadataResponse": {
  "description": "A dashboard part metadata.",
  "properties": {
   "inputs": {
    "description": "Inputs to dashboard part.",
    "items": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "array"
   },
   "settings": {
    "additionalProperties": {
     "$ref": "pulumi.json#/Any"
    },
    "description": "Settings of dashboard part.",
    "type": "object"
   },
   "type": {
    "description": "The type of dashboard part.",
    "type": "string"
   }
  },
  "required": [
   "type"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartMetadataType": {
  "description": "The dashboard part metadata type.",
  "enum": [
   {
    "description": "The markdown part type.",
    "name": "markdown",
    "value": "Extension/HubsExtension/PartType/MarkdownPart"
   }
  ],
  "type": "string"
 },
 "azure-native:portal:DashboardParts": {
  "description": "A dashboard part.",
  "properties": {
   "metadata": {
    "$ref": "#/types/azure-native:portal:DashboardPartMetadata",
    "description": "The dashboard's part metadata.",
    "type": "object"
   },
   "position": {
    "$ref": "#/types/azure-native:portal:DashboardPartsPosition",
    "description": "The dashboard's part position.",
    "type": "object"
   }
  },
  "required": [
   "position"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartsPosition": {
  "description": "The dashboard's part position.",
  "properties": {
   "colSpan": {
    "description": "The dashboard's part column span.",
    "type": "integer"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard part's metadata."
   },
   "rowSpan": {
    "description": "The dashboard's part row span.",
    "type": "integer"
   },
   "x": {
    "description": "The dashboard's part x coordinate.",
    "type": "integer"
   },
   "y": {
    "description": "The dashboard's part y coordinate.",
    "type": "integer"
   }
  },
  "required": [
   "colSpan",
   "rowSpan",
   "x",
   "y"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartsPositionResponse": {
  "description": "The dashboard's part position.",
  "properties": {
   "colSpan": {
    "description": "The dashboard's part column span.",
    "type": "integer"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard part's metadata."
   },
   "rowSpan": {
    "description": "The dashboard's part row span.",
    "type": "integer"
   },
   "x": {
    "description": "The dashboard's part x coordinate.",
    "type": "integer"
   },
   "y": {
    "description": "The dashboard's part y coordinate.",
    "type": "integer"
   }
  },
  "required": [
   "colSpan",
   "rowSpan",
   "x",
   "y"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPartsResponse": {
  "description": "A dashboard part.",
  "properties": {
   "metadata": {
    "$ref": "#/types/azure-native:portal:DashboardPartMetadataResponse",
    "description": "The dashboard's part metadata.",
    "type": "object"
   },
   "position": {
    "$ref": "#/types/azure-native:portal:DashboardPartsPositionResponse",
    "description": "The dashboard's part position.",
    "type": "object"
   }
  },
  "required": [
   "position"
  ],
  "type": "object"
 },
 "azure-native:portal:DashboardPropertiesWithProvisioningState": {
  "description": "Dashboard Properties with Provisioning state",
  "properties": {
   "lenses": {
    "description": "The dashboard lenses.",
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardLens",
     "type": "object"
    },
    "type": "array"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard metadata."
   }
  },
  "type": "object"
 },
 "azure-native:portal:DashboardPropertiesWithProvisioningStateResponse": {
  "description": "Dashboard Properties with Provisioning state",
  "properties": {
   "lenses": {
    "description": "The dashboard lenses.",
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardLensResponse",
     "type": "object"
    },
    "type": "array"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any",
    "description": "The dashboard metadata."
   },
   "provisioningState": {
    "description": "The status of the last operation.",
    "type": "string"
   }
  },
  "required": [
   "provisioningState"
  ],
  "type": "object"
 },
 "azure-native:portal:SystemDataResponse": {
  "description": "Metadata pertaining to creation and last modification of the resource.",
  "properties": {
   "createdAt": {
    "description": "The timestamp of resource creation (UTC).",
    "type": "string"
   },
   "createdBy": {
    "description": "The identity that created the resource.",
    "type": "string"
   },
   "createdByType": {
    "description": "The type of identity that created the resource.",
    "type": "string"
   },
   "lastModifiedAt": {
    "description": "The timestamp of resource last modification (UTC)",
    "type": "string"
   },
   "lastModifiedBy": {
    "description": "The identity that last modified the resource.",
    "type": "string"
   },
   "lastModifiedByType": {
    "description": "The type of identity that last modified the resource.",
    "type": "string"
   }
  },
  "type": "object"
 },
 "azure-native:storage:BlobAccessTier": {
  "description": "The access tier of a storage blob.",
  "enum": [
   {
    "description": "Optimized for storing data that is accessed frequently.",
    "value": "Hot"
   },
   {
    "description": "Optimized for storing data that is infrequently accessed and stored for at least 30 days.",
    "value": "Cool"
   },
   {
    "description": "Optimized for storing data that is rarely accessed and stored for at least 180 days with flexible latency requirements, on the order of hours.",
    "value": "Archive"
   }
  ],
  "type": "string"
 },
 "azure-native:storage:BlobType": {
  "description": "The type of a storage blob to be created.",
  "enum": [
   {
    "description": "Block blobs store text and binary data. Block blobs are made up of blocks of data that can be managed individually.",
    "value": "Block"
   },
   {
    "description": "Append blobs are made up of blocks like block blobs, but are optimized for append operations.",
    "value": "Append"
   }
  ],
  "type": "string"
 }
}
---

[TestPortalDashboardGen - 4]
{
 "azure-native:portal:DashboardLens": {
  "properties": {
   "metadata": {
    "$ref": "pulumi.json#/Any"
   },
   "order": {
    "type": "integer"
   },
   "parts": {
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardParts",
     "type": "object"
    },
    "type": "array"
   }
  },
  "required": [
   "order",
   "parts"
  ]
 },
 "azure-native:portal:DashboardLensResponse": {
  "properties": {
   "metadata": {
    "$ref": "pulumi.json#/Any"
   },
   "order": {},
   "parts": {
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardPartsResponse",
     "type": "object"
    }
   }
  },
  "required": [
   "order",
   "parts"
  ]
 },
 "azure-native:portal:DashboardPartMetadata": {
  "properties": {
   "inputs": {
    "items": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "array"
   },
   "settings": {
    "additionalProperties": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "object"
   },
   "type": {
    "type": "string"
   }
  },
  "required": [
   "type"
  ]
 },
 "azure-native:portal:DashboardPartMetadataResponse": {
  "properties": {
   "inputs": {
    "items": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "array"
   },
   "settings": {
    "additionalProperties": {
     "$ref": "pulumi.json#/Any"
    },
    "type": "object"
   },
   "type": {
    "type": "string"
   }
  },
  "required": [
   "type"
  ]
 },
 "azure-native:portal:DashboardParts": {
  "properties": {
   "metadata": {
    "$ref": "#/types/azure-native:portal:DashboardPartMetadata",
    "type": "object"
   },
   "position": {
    "$ref": "#/types/azure-native:portal:DashboardPartsPosition",
    "type": "object"
   }
  },
  "required": [
   "position"
  ]
 },
 "azure-native:portal:DashboardPartsPosition": {
  "properties": {
   "colSpan": {
    "type": "integer"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any"
   },
   "rowSpan": {
    "type": "integer"
   },
   "x": {
    "type": "integer"
   },
   "y": {
    "type": "integer"
   }
  },
  "required": [
   "colSpan",
   "rowSpan",
   "x",
   "y"
  ]
 },
 "azure-native:portal:DashboardPartsPositionResponse": {
  "properties": {
   "colSpan": {},
   "metadata": {
    "$ref": "pulumi.json#/Any"
   },
   "rowSpan": {},
   "x": {},
   "y": {}
  },
  "required": [
   "colSpan",
   "rowSpan",
   "x",
   "y"
  ]
 },
 "azure-native:portal:DashboardPartsResponse": {
  "properties": {
   "metadata": {
    "$ref": "#/types/azure-native:portal:DashboardPartMetadataResponse",
    "type": "object"
   },
   "position": {
    "$ref": "#/types/azure-native:portal:DashboardPartsPositionResponse",
    "type": "object"
   }
  },
  "required": [
   "position"
  ]
 },
 "azure-native:portal:DashboardPropertiesWithProvisioningState": {
  "properties": {
   "lenses": {
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardLens",
     "type": "object"
    },
    "type": "array"
   },
   "metadata": {
    "$ref": "pulumi.json#/Any"
   }
  }
 },
 "azure-native:portal:DashboardPropertiesWithProvisioningStateResponse": {
  "properties": {
   "lenses": {
    "items": {
     "$ref": "#/types/azure-native:portal:DashboardLensResponse",
     "type": "object"
    }
   },
   "metadata": {
    "$ref": "pulumi.json#/Any"
   },
   "provisioningState": {}
  }
 },
 "azure-native:portal:SystemDataResponse": {
  "properties": {
   "createdAt": {},
   "createdBy": {},
   "createdByType": {},
   "lastModifiedAt": {},
   "lastModifiedBy": {},
   "lastModifiedByType": {}
  }
 }
}
---
